--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@playwright/test": "^1.40.1"
+  },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
