--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,5 @@ node_modules/
 /test-results/
 /playwright-report/
 /playwright/.cache/
-/test-results/
-/playwright-report/
 /blob-report/
-/playwright/.cache/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+/playwright/.auth/
